[package]
name = "eyes"
version = "0.1.0"
edition = "2021"
desription = "A simple port scanner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0.75"
futures = "0.3.28"
